# gtk-todomvc

./: LICENSE  brittany.yaml  stack.yaml  todomvc.cabal
src/: Main.hs
