name:                todomvc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/leshow/todomvc#readme
license:             BSD3
license-file:        LICENSE
author:              Evan Cameron
maintainer:          cameron.evan@gmail.com
copyright:           MIT
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todomvc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:        base >= 4.12 && < 5
                      , gi-gtk
                      , gi-gtk-declarative
                      , gi-gtk-declarative-app-simple
                      , text
                      , vector
  hs-source-dirs:       src
  main-is:              Main.hs
  ghc-options:          -O2 -threaded "-with-rtsopts=-N" -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions:          DeriveFoldable
                            , DeriveFunctor
                            , DeriveGeneric
                            , DeriveTraversable
                            , DeriveLift
                            , DerivingStrategies
                            , GeneralizedNewtypeDeriving
                            , OverloadedStrings
                            , OverloadedLabels
                            , ExistentialQuantification
                            , StandaloneDeriving
                            , ScopedTypeVariables
                            , UnicodeSyntax
                            , BinaryLiterals
                            , NumDecimals
                            , ConstraintKinds
                            , RankNTypes
                            , TypeFamilies
                            , TypeInType
                            , DataKinds
                            , KindSignatures
                            , TypeOperators
                            , TypeApplications
                            , GADTs
                            , NamedFieldPuns
                            , InstanceSigs
                            , MultiParamTypeClasses
                            , FunctionalDependencies
                            , ConstrainedClassMethods
                            , InstanceSigs
                            , FlexibleInstances
                            , FlexibleContexts
                            , BangPatterns
                            , ViewPatterns
                            , PatternGuards
                            , MultiWayIf
                            , EmptyCase
                            , LambdaCase
